# in-design-svg-generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
content/: catalog-old.yaml  catalog.yaml  source.json
content/rooms/: sala-01.yaml  sala-02.yaml  sala-03.yaml  sala-04.yaml  sala-05.yaml  sala-06.yaml  sala-07.yaml
reference/: Catalogo_Archivo_NoConservado_v4.json  Catalogo_Archivo_NoConservado_v9.json
reference/imagenes/: L058-1.avif  _log_renombrado.txt
src/: build_pdf.py  embed_images.py  generate.py  layouts.py  render.py  server.py  styles.py
src/templates/: __init__.py  _ficha_common.py  bibliografia.py  blank_cream.py  blank_red.py  blank_white.py  creditos.py  epigrafe.py  ficha_imagen.py  ficha_texto.py  indice.py  nota_curatorial.py  placeholder.py  portada.py  portadilla_sala.py
src/web_templates/: index.html
tests/: test_section1.py
